--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,77 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,600;1,500&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <header class="header">
+    <div class="header__container">
+      <div class="header__inner">
+        <a class="header__logo logo" href="#">
+          <img src="images/logo.svg" alt="">
+        </a>
+        <!-- navigation -->
+        <nav class="header__menu menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a class="menu__link" href="#">Life insurance</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Why Bello</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Help</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="header__right">
+          <a class="header__log-in" href="#">Log in</a>
+          <button class="header__right-btn" type="button" name="button">Get my price</button>
+        </div>
+
+      </div>
+    </div>
+  </header>
+
+  <section class="main">
+    <div class="container">
+      <p class="main__subtitle subtitle">MEET BELLO</p>
+      <h1 class="main__title title">A new kind of life insurance</h1>
+      <p class="main__info">Secure your family's financial future, in as little as 10 minutes.</p>
+      <button class="btn" type="button" name="button">
+        <span>Get my price</span>
+        <img src="images/btn-arrow.svg" alt="">
+      </button>
+    </div>
+  </section>
+
+  <section class="statistics">
+    <div class="container">
+      <div class="statistics__inner">
+        <!-- statistics-left -->
+        <div class="statistics__left">
+          <div class="statistics__img">
+            <img src="images/statistics.png" alt="">
+          </div>
+          <p class="statistics__left-text"><span>*</span>Data for illustrative purposes</p>
+        </div>
+        <!-- statistics-right -->
+        <div class="statistics__right">
+          <p class="statistics__subtitle subtitle">Secure your future</p>
+          <h3 class="statistics__title title">It’s more affordable than you think</h3>
+          <p class="statistics__info info">Life insurance shouldn’t be confusing or expensive. Bello’s term life insurance makes protecting your loved ones easy and affordable.</p>
+          <a class="statistics__link mini-link" href="#">
+            <span>Get My Price</span>
+            <svg width="30" height="11" viewBox="0 0 30 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M29.8485 6.69202C29.7405 6.07946 29.7459 5.25256 29.4913 4.66586C29.3271 4.30614 28.9028 4.1866 28.6169 3.99409C28.1677 3.7332 27.7102 3.42519 27.2611 3.16429C25.5704 2.1506 23.8798 1.13691 22.1892 0.123214C22.3607 0.238719 22.3803 1.20697 22.4135 1.39545C22.4468 1.58393 22.4663 2.55219 22.6379 2.66769C23.4873 3.1981 24.3774 3.67277 25.2268 4.20317C16.889 4.36156 8.50229 4.52857 0.172774 4.73408C0.270527 4.71684 0.466496 7.25729 0.613126 7.23144C8.19288 7.06096 15.8215 6.88187 23.4584 6.74989C22.5058 7.06362 21.521 7.4802 20.6505 7.97379C20.5122 8.04677 20.7345 8.73633 20.8914 9.34027C20.9579 9.71723 21.0244 10.0942 21.0908 10.4711C21.2292 10.3982 21.4164 10.3166 21.5547 10.2436C21.5547 10.2436 21.6036 10.235 21.5952 10.1879C23.0679 9.39376 24.7048 8.95938 26.3416 8.52501C27.2537 8.26702 28.174 8.05615 29.0694 7.70392C29.5905 7.51488 29.8265 7.42467 29.8661 7.0776C29.8745 7.12472 29.9233 7.1161 29.9316 7.16322C29.915 7.06898 29.8984 6.97474 29.8818 6.8805C29.8735 6.83338 29.8569 6.73914 29.8485 6.69202ZM27.5382 5.59326C27.4893 5.60188 27.4893 5.60188 27.4404 5.6105C27.4321 5.56338 27.4238 5.51626 27.4238 5.51626C27.4238 5.51626 27.481 5.55476 27.5382 5.59326Z" fill="white"/>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="js/main/min.js"></script>
 </body>
 </html>
