--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="css/style.min.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,600;1,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="header">
@@ -75,6 +74,105 @@
           </a>
         </div>
       </div>
+    </div>
+  </section>
+
+  <section class="help">
+    <div class="container">
+      <div class="help__inner">
+        <div class="help__right">
+          <p class="help__subtitle subtitle">Technology meets service</p>
+          <h3 class="help__title title">We're here to help</h3>
+          <p class="help__info info">Bella, our smart bot, can guide you to your perfect policy. There’s also human help whenever you need it.</p>
+          <a class="statistics__link mini-link" href="#">
+            <span>Get help</span>
+            <svg width="30" height="11" viewBox="0 0 30 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M29.8485 6.69202C29.7405 6.07946 29.7459 5.25256 29.4913 4.66586C29.3271 4.30614 28.9028 4.1866 28.6169 3.99409C28.1677 3.7332 27.7102 3.42519 27.2611 3.16429C25.5704 2.1506 23.8798 1.13691 22.1892 0.123214C22.3607 0.238719 22.3803 1.20697 22.4135 1.39545C22.4468 1.58393 22.4663 2.55219 22.6379 2.66769C23.4873 3.1981 24.3774 3.67277 25.2268 4.20317C16.889 4.36156 8.50229 4.52857 0.172774 4.73408C0.270527 4.71684 0.466496 7.25729 0.613126 7.23144C8.19288 7.06096 15.8215 6.88187 23.4584 6.74989C22.5058 7.06362 21.521 7.4802 20.6505 7.97379C20.5122 8.04677 20.7345 8.73633 20.8914 9.34027C20.9579 9.71723 21.0244 10.0942 21.0908 10.4711C21.2292 10.3982 21.4164 10.3166 21.5547 10.2436C21.5547 10.2436 21.6036 10.235 21.5952 10.1879C23.0679 9.39376 24.7048 8.95938 26.3416 8.52501C27.2537 8.26702 28.174 8.05615 29.0694 7.70392C29.5905 7.51488 29.8265 7.42467 29.8661 7.0776C29.8745 7.12472 29.9233 7.1161 29.9316 7.16322C29.915 7.06898 29.8984 6.97474 29.8818 6.8805C29.8735 6.83338 29.8569 6.73914 29.8485 6.69202ZM27.5382 5.59326C27.4893 5.60188 27.4893 5.60188 27.4404 5.6105C27.4321 5.56338 27.4238 5.51626 27.4238 5.51626C27.4238 5.51626 27.481 5.55476 27.5382 5.59326Z" fill="white"/>
+            </svg>
+          </a>
+        </div>
+        <div class="help__left">
+          <img class="help__dots" src="images/dots.svg" alt="">
+          <div class="help__img">
+            <img src="images/help.jpg" alt="">
+          </div>
+          <div class="help__signature">
+            <span>There's also human help 👋</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="safe">
+    <div class="container">
+      <img class="safe__umbrella" src="images/umbrella.png" alt="">
+      <p class="safe__subtitle subtitle">Top-Rated Term Life Insurance</p>
+      <h3 class="safe__title title">You’re in safe hands</h3>
+      <p class="safe__info info">We've partnered with, [insert underwriter], one of the world’s largest, most trusted insurance companies. This means we can ensure reliability in paying Claims.</p>
+
+      <div class="safe__content">
+        <!-- item -->
+        <div class="safe__item">
+          <img class="safe__item-img" src="images/safe-1.png" alt="">
+          <h5 class="safe__item-title">Top-Rated</h5>
+          <p class="safe__item-info">
+            A+ Financial Strength Rating by A.M. Best.
+            <a href="#">What does this mean?</a>
+          </p>
+        </div>
+        <!-- item -->
+        <div class="safe__item">
+          <img class="safe__item-img" src="images/safe-2.png" alt="">
+          <h5 class="safe__item-title">Expert guidance</h5>
+          <p class="safe__item-info">
+            We've placed millions of dollars in coverage people nationwide.
+          </p>
+        </div>
+        <!-- item -->
+        <div class="safe__item">
+          <img class="safe__item-img" src="images/safe-3.png" alt="">
+          <h5 class="safe__item-title">We care</h5>
+          <p class="safe__item-info">
+            We care about you. We’re a 5 star insurance company. Well… Close enough!
+          </p>
+        </div>
+      </div>
+      <img class="safe__dog" src="images/dog.png" alt="">
+    </div>
+  </section>
+
+  <section class="insurance">
+    <div class="container">
+      <p class="insurance__subtitle subtitle">How it works</p>
+      <h3 class="insurance__title title">Affordable life insurance in minutes</h3>
+      <p class="insurance__info info">We use technology to save you time and money – no pushy sales agents, paperwork, or extra fees. Just a few clicks and you’re done.</p>
+      <div class="insurance__content">
+        <!-- item -->
+        <div class="insurance__item insurance__item-1">
+          <img class="insurance__item-img" src="images/insurance-1.png" alt="">
+          <h5 class="insurance__item-title">Get My Price</h5>
+          <p class="insurance__item-info">Choose the amount that you would like to be covered for and we’ll give you a quote.</p>
+        </div>
+
+        <!-- item -->
+        <div class="insurance__item insurance__item-2">
+          <img class="insurance__item-img" src="images/insurance-2.png" alt="">
+          <h5 class="insurance__item-title">Apply</h5>
+          <p class="insurance__item-info">Answer a few questions and get your final price.</p>
+        </div>
+
+        <!-- item -->
+        <div class="insurance__item insurance__item-3">
+          <img class="insurance__item-img" src="images/insurance-3.png" alt="">
+          <h5 class="insurance__item-title">You’re Covered</h5>
+          <p class="insurance__item-info">Congratulations on securing your loved ones financial future!</p>
+        </div>
+      </div>
+      <button class="insurance__btn btn" type="button" name="button">
+        <span>Get my price</span>
+        <img src="images/btn-arrow.svg" alt="">
+      </button>
     </div>
   </section>
   <script src="js/main/min.js"></script>
