--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
 
         <div class="header__right">
           <a class="header__log-in" href="#">Log in</a>
-          <button class="header__right-btn" type="button" name="button">Get my price</button>
+          <button class="header__right-btn btn-light" type="button" name="button">Get my price</button>
         </div>
 
       </div>
@@ -96,7 +96,7 @@
           <div class="help__img">
             <img src="images/help.jpg" alt="">
           </div>
-          <div class="help__signature">
+          <div class="help__signature signature">
             <span>There's also human help 👋</span>
           </div>
         </div>
@@ -175,6 +175,192 @@
       </button>
     </div>
   </section>
+
+  <section class="need">
+    <div class="container">
+      <div class="need__inner">
+        <div class="need__left">
+          <img class="need__dots" src="images/dots.svg" alt="">
+          <div class="need__img">
+            <img src="images/need.jpg" alt="">
+          </div>
+          <div class="need__signature signature">
+            <span>Nerd out in our Learning Center 🤓</span>
+          </div>
+        </div>
+        <div class="need__right">
+          <p class="need__subtitle subtitle">You've Got This</p>
+          <h3 class="need__title title">Everything you need—
+            completely free</h3>
+          <p class="need__info info">Here’s the latest info, guides, and, helpful tools, from the Bello team. Learn about life insurance, finances, health and wellness.</p>
+          <a class="need__link mini-link" href="#">
+            <span>Visit Learning Center</span>
+            <svg width="30" height="11" viewBox="0 0 30 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M29.8485 6.69202C29.7405 6.07946 29.7459 5.25256 29.4913 4.66586C29.3271 4.30614 28.9028 4.1866 28.6169 3.99409C28.1677 3.7332 27.7102 3.42519 27.2611 3.16429C25.5704 2.1506 23.8798 1.13691 22.1892 0.123214C22.3607 0.238719 22.3803 1.20697 22.4135 1.39545C22.4468 1.58393 22.4663 2.55219 22.6379 2.66769C23.4873 3.1981 24.3774 3.67277 25.2268 4.20317C16.889 4.36156 8.50229 4.52857 0.172774 4.73408C0.270527 4.71684 0.466496 7.25729 0.613126 7.23144C8.19288 7.06096 15.8215 6.88187 23.4584 6.74989C22.5058 7.06362 21.521 7.4802 20.6505 7.97379C20.5122 8.04677 20.7345 8.73633 20.8914 9.34027C20.9579 9.71723 21.0244 10.0942 21.0908 10.4711C21.2292 10.3982 21.4164 10.3166 21.5547 10.2436C21.5547 10.2436 21.6036 10.235 21.5952 10.1879C23.0679 9.39376 24.7048 8.95938 26.3416 8.52501C27.2537 8.26702 28.174 8.05615 29.0694 7.70392C29.5905 7.51488 29.8265 7.42467 29.8661 7.0776C29.8745 7.12472 29.9233 7.1161 29.9316 7.16322C29.915 7.06898 29.8984 6.97474 29.8818 6.8805C29.8735 6.83338 29.8569 6.73914 29.8485 6.69202ZM27.5382 5.59326C27.4893 5.60188 27.4893 5.60188 27.4404 5.6105C27.4321 5.56338 27.4238 5.51626 27.4238 5.51626C27.4238 5.51626 27.481 5.55476 27.5382 5.59326Z" fill="white"/>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="cards">
+    <div class="container">
+      <div class="cards__inner">
+        <!-- item -->
+        <div class="cards__item">
+          <div class="cards__item-box">
+            <h5 class="cards__item-title">Calculator</h5>
+            <p class="cards__item-info">How much life insurance do I need?</p>
+          </div>
+          <a class="cards__item-link" href="#">Calculate Coverage</a>
+        </div>
+        <!-- item -->
+        <div class="cards__item">
+          <div class="">
+            <h5 class="cards__item-title">Term vs. perm</h5>
+            <p class="cards__item-info">Term vs. whole life insurance. Which is best for you?</p>
+          </div>
+          <a class="cards__item-link" href="#">See the winner</a>
+        </div>
+        <!-- item -->
+        <div class="cards__item">
+          <div class="cards__item-box">
+            <h5 class="cards__item-title">Pricing</h5>
+            <p class="cards__item-info">How much does life insurance cost?</p>
+          </div>
+          <a class="cards__item-link" href="#">Tell me more</a>
+        </div>
+        <!-- item -->
+        <div class="cards__item">
+          <div class="cards__item-box">
+            <h5 class="cards__item-title">Insurance 101</h5>
+            <p class="cards__item-info">How much life insurance do I need?</p>
+          </div>
+          <a class="cards__item-link" href="#">Become an expert</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="started">
+    <div class="container">
+      <img class="started__img started__img-1" src="images/started-1.png" alt="">
+      <img class="started__img started__img-2" src="images/started-2.png" alt="">
+      <h3 class="started__title title">Get Started Today.</h3>
+      <p class="started__info info">Join the Bello community of people who are securing their financial future.</p>
+      <button class="insurance__btn btn" type="button" name="button">
+        <span>Get my price</span>
+        <img src="images/btn-arrow.svg" alt="">
+      </button>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container">
+      <!-- footer top -->
+      <div class="footer__top">
+        <div class="footer__left">
+          <a class="footer__logo logo" href="#">
+            <img src="images/logo.svg" alt="">
+          </a>
+          <p class="footer__info">Bello is a trading name of Bello Insurance Services LLC. Bello policies are issued by [Insert Underwriter here].</p>
+          <div class="footer__search">
+            <input type="text" name="" value="">
+            <button type="button" name="button">Go</button>
+          </div>
+          <div class="footer__social">
+            <ul class="footer__social-list">
+              <li class="footer__social-item">
+                <a href="#"><img src="images/facebook.svg" alt=""></a>
+              </li>
+              <li class="footer__social-item">
+                <a href="#"><img src="images/insta.svg" alt=""></a>
+              </li>
+              <li class="footer__social-item">
+                <a href="#"><img src="images/youtube.svg" alt=""></a>
+              </li>
+              <li class="footer__social-item">
+                <a href="#"><img src="images/linkedin..svg" alt=""></a>
+              </li>
+              <li class="footer__social-item">
+                <a href="#"><img src="images/tiktok.svg" alt=""></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__right">
+          <!-- col -->
+          <div class="footer__col">
+            <h5 class="footer__col-title">Resources</h5>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a class="footer__link" href="">Term life insurance plans</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="">Insurance calculator</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="">Guide to life insurance</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="">Contact</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="">FAQs</a>
+              </li>
+            </ul>
+          </div>
+          <!-- col -->
+          <div class="footer__col">
+            <h5 class="footer__col-title">Magazine</h5>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a class="footer__link" href="">Insurance</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="">Finances</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="">Health</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="">Updates</a>
+              </li>
+            </ul>
+          </div>
+          <!-- col -->
+          <div class="footer__col">
+            <h5 class="footer__col-title">More</h5>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a class="footer__link" href="">Claims</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="">Terms</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="">Privacy</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="">Licenses</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <!-- footer bottem -->
+    <div class="footer__bottom">
+      <div class="container">
+        <div class="footer__bottom-inner">
+          <p>© 2020 Bello insurance Services LLC. All right reserved.</p>
+          <button class="footer__bottom-btn btn-light" type="button" name="button">Get my price</button>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="js/main/min.js"></script>
 </body>
 </html>
